Remoção da imagem de background

--- a/Views/Home/List.cshtml
+++ b/Views/Home/List.cshtml
@@ -20,7 +20,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </style>
 </head>
 
-<body background="/img/background.jpg">
+<body bgcolor="#cccccc">
 
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K5XV8L2"
