Task #236 - Criar página home e exibir gráfico

--- a/Site/public/style.css
+++ b/Site/public/style.css
@@ -92,11 +92,11 @@
 }
 
 .check_mark .sa-icon.sa-success .sa-line.sa-tip {
-  -ms-transform: rotate(45deg) \9;
+  transform: rotate(45deg) \9;
 }
 
 .check_mark .sa-icon.sa-success .sa-line.sa-long {
-  -ms-transform: rotate(-45deg) \9;
+  transform: rotate(-45deg) \9;
 }
 
 .check_mark .animateSuccessTip {
