--- a/Site/src/App.css
+++ b/Site/src/App.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'FrederickaGreat';
-  src: url('./fredericka-great.ttf') format('truetype');
+  font-family: 'cash-currency';
+  src: url('./fonts/cash-currency.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
